Angular directive basics

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,4 @@
+<p>---------------------------------Binding variables external template (header)-------------------------------------</p>
 <p>
     header works! {{title}}
 </p>
@@ -22,5 +23,6 @@
 <!--One way data binding -->
 <p><label>one way</label><input type="text" [value]="textValue"/></p>
 <h4>{{textValue}}</h4>
+<p>---------------------------------Binding variables external template (header)-------------------------------------</p>
 
 
